busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    role: frontend
spec:
  containers:
  - name: busybox
    image: rancher/curl:latest
    command: ["sleep", "3600"]
