unauthorized.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unauth
  labels:
    app: unauth
spec:
  containers:
  - name: busybox
    image: rancher/curl:latest
    command: ["sleep", "3600"]
