network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: frontend
#      - ipBlock:
 #         cidr: 8.8.8.8/32
      #  except:
       # - 172.17.1.0/24
